<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:padding="5dp">
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_searchByZipCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherStatistics_searchByZipCode_listItemTitle"
                    android:textSize="14sp"
                    android:textColor="@color/primaryColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weatherStatisticsFragment_textInputLayout_zipCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/weatherStatistics_zipCode_inputTitle"
                    android:textColorHint="@color/primaryColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weatherStatisticsFragment_textView_searchByZipCode"
                    app:layout_constraintEnd_toStartOf="@id/weatherStatisticsFragment_button_getWeather"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weatherStatisticsFragment_textInputEditText_zipCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/primaryColor"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/weatherStatisticsFragment_button_getWeather"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherStatistics_getWeather_button"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toEndOf="@id/weatherStatisticsFragment_textInputLayout_zipCode"
                    app:layout_constraintTop_toTopOf="@id/weatherStatisticsFragment_textInputLayout_zipCode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/weatherStatisticsFragment_textInputLayout_zipCode"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_locationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherStatistics_selectedLocation_listItemTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_locationData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Mountain View"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weatherStatisticsFragment_textView_locationTitle"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weatherStatisticsFragment_constraintLayout_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_temperatureTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherStatistics_temperature_listItemTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_temperatureData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="55.58 F"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weatherStatisticsFragment_textView_temperatureTitle"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weatherStatisticsFragment_constraintLayout_windSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_windSpeedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherStatistics_windSpeed_listItemTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_windSpeedData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10.29 mph"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weatherStatisticsFragment_textView_windSpeedTitle"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_humidityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherStatistics_humidity_listItemTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_humidityData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="54%"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weatherStatisticsFragment_textView_humidityTitle"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_visibilityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherStatistics_visibility_listItemTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_visibilityData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10 km"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weatherStatisticsFragment_textView_visibilityTitle"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_sunriseTimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherStatistics_sunriseTime_listItemTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_sunriseTimeData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3/26/2018 2:01:27 PM UTC"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weatherStatisticsFragment_textView_sunriseTimeTitle"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_sunsetTimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weatherStatistics_sunsetTime_listItemTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/weatherStatisticsFragment_textView_sunsetTimeData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3/27/2018 2:26:26 AM UTC"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weatherStatisticsFragment_textView_sunsetTimeTitle"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/weatherStatisticsFragment_frameLayout_progressBarHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </FrameLayout>
</FrameLayout>
